tests/sksl/errors/golden/StructTooComplex.glsl
### Compilation failed:

error: 10: type 'struct_too_complex' is too complex
1 error
